updated styling for main.html. Created a main.css for a styling sheet specifically for main.html. Fixed grid overlap issue so footer is sticky now. Also added a hover property to both the main menu buttons and the navbar items so that when user hovers over those items, it changes color and underlines to provide user with informative feedback

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,9 @@
     align-items: center;
 }
 
-a {
-    text-decoration: none; 
+.card a {
+    text-decoration: none;
+    color: #25446A !important;
 }
 
 .main-menu-selection :hover {
@@ -160,9 +161,9 @@ img[alt=logo] {
     width: 50px;
 }
 
-.card a {
+/* .card a {
     text-decoration: none;
-}
+} */
 
 img[alt="profile-icon"] {
     position: absolute; 
